Fix the jumping color picker button

--- a/src/main/webapp/app/shared/category-selector/category-selector.component.scss
+++ b/src/main/webapp/app/shared/category-selector/category-selector.component.scss
@@ -31,6 +31,11 @@ jhi-category-selector {
     }
 }
 
+// Otherwise the x will jump when opening the colorpicker
+.remove-button::before {
+    position: absolute;
+}
+
 .tag-option {
     background: #fff;
 
